first working iteration

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </header>
 
     <main>
-
+        <button onclick="cast()">cast</button>
+        <button onclick="sellAll()">sell</button>
     </main>
 
 </body>
