i can't figure out how to import shit :broken_heart:

--- a/launch.html
+++ b/launch.html
@@ -4,6 +4,11 @@
     <title>Offline Fishing Sim</title>
     <meta name="viewport" content="width=device-width">
     <link href="./assets/main.css" rel="stylesheet">
+    <script src="./assets/classes/Areas.js"></script>
+    <script src="./assets/classes/Fish.js"></script>
+    <script src="./assets/classes/Profile.js"></script>
+    <script src="./assets/classes/Rand.js"></script>
+    <script src="./assets/classes/Tools.js"></script>
     <script src="./assets/main.js"></script>
 </head>
 
