more testing stuff and loading saves

--- a/launch.html
+++ b/launch.html
@@ -38,6 +38,13 @@
         <button onclick="cast()">cast</button>
         <button onclick="sellAll()">sell</button>
         <br>
+        buy rods:
+        <button onclick="buyRod(0)">unlock basic rod</button>
+        <button onclick="buyRod(1)">unlock novice rod</button>
+        <button onclick="buyRod(2)">unlock reinforced rod</button>
+        <button onclick="buyRod(3)">unlock golden rod</button>
+        <button onclick="buyRod(4)">unlock god rod</button>
+        <br>
         unlock area:
         <button onclick="unlock(1)">unlock river</button>
         <button onclick="unlock(2)">unlock beach</button>
@@ -51,6 +58,6 @@
         <br>
         <br>
         dev:
-        <button onclick="giveMoney(10000)">give 10k</button>
+        <button onclick="profile.deposit(10000)">give 10k</button>
     </footer>
 </body>
