--- a/launch.html
+++ b/launch.html
@@ -23,8 +23,9 @@
 <body>
 
     <header>
-        <span id="balance"></span>
-        <span id="invValue"></span>
+        <span align="left" id="balance"></span>
+        <span align="center" id="area"></span>
+        <span align="right" id="invValue"></span>
     </header>
 
     <main>
@@ -32,7 +33,8 @@
     </main>
 
     <footer>
-        save: <button onclick="save(1)">save</button>
+        save: <button onclick="save(1)">save to save1</button><br>
+        load: <button onclick="load(1)">load from save1</button><br>
         <br>
         fishing:
         <button onclick="cast()">cast</button>
