--- a/launch.html
+++ b/launch.html
@@ -34,13 +34,14 @@
     </div>
 
     <div class="save-menu" style="left: -500px;">
-        SAVE: <button onclick="save(1)">Slot #1</button><button onclick="save(2)">Slot #2</button><button onclick="save(3)">Slot #3</button>
-        <br>
-        LOAD: <button onclick="load(1)">Slot #1</button><button onclick="load(2)">Slot #2</button><button onclick="load(3)">Slot #3</button>
+        SAVE: <button onclick="save(1)">Slot #1</button><button onclick="save(2)">Slot #2</button><button onclick="save(3)">Slot #3</button><br>
+        LOAD: <button onclick="load(1)">Slot #1</button><button onclick="load(2)">Slot #2</button><button onclick="load(3)">Slot #3</button><br>
+        <span id="saving-alert"></span>
     </div>
 
     <div class="area-menu">
-        TO AREAS: <button onclick="move(0)">To LAKE</button><button onclick="move(1)">To RIVER</button><button onclick="move(2)">To BEACH</button><button onclick="move(3)">To OCEAN</button>
+        TO AREAS: <button onclick="move(0)">To LAKE</button><button onclick="move(1)">To RIVER</button><button onclick="move(2)">To BEACH</button><button onclick="move(3)">To OCEAN</button><br>
+        <span id="area-alert"></span>
     </div>
 
     <div class="shop-menu" style="right: -500px;">
