added more debug tools
currently an issue with buying rods and casting

--- a/launch.html
+++ b/launch.html
@@ -61,7 +61,8 @@
     </main>
 
     <footer>
-        dev:
+        debug:
         <button onclick="profile.deposit(10000)">give 10k</button>
+        <button onclick="profile.toString()">view prof. stats</button>
     </footer>
 </body>
