--- a/launch.html
+++ b/launch.html
@@ -56,7 +56,7 @@
         <span class="alert" id="shop-alert"></span>
     </div>
 
-    <div class="menu" id="catching-menu">
+    <div class="menu" id="catching-menu" style="display: none;">
 
     </div>
 
